# vcglib-maya

./: CMakeLists.txt  README.md
include/other/: autoAlignUtils.h  decimateUtils.h  loadModelUtils.h  mayaConvertUtils.h  meshStatsUtils.h  readFileUtils.h  writeFileUtils.h
include/polyModifier/: polyModifierCmd.h  polyModifierFty.h  polyModifierNode.h
include/utilities/: debugUtils.h
include/vcgNodes/: vcgNodeTypeIds.h
include/vcgNodes/exampleTemplate/: exampleTemplateCmd.h  exampleTemplateFty.h  exampleTemplateNode.h
include/vcgNodes/vcgDecimate/: vcgDecimateCmd.h  vcgDecimateFty.h  vcgDecimateNode.h
include/vcgNodes/vcgMeshCutter/: vcgMeshCutterCmd.h  vcgMeshCutterFty.h  vcgMeshCutterNode.h
include/vcgNodes/vcgMeshStats/: vcgMeshStatsCmd.h  vcgMeshStatsFty.h  vcgMeshStatsNode.h
include/vcgNodes/vcgReadFile/: vcgReadFileCmd.h  vcgReadFileFty.h  vcgReadFileNode.h
include/vcgNodes/vcgWriteFile/: vcgWriteFileCmd.h  vcgWriteFileFty.h  vcgWriteFileNode.h
src/polyModifier/: polyModifierCmd.cpp  polyModifierFty.cpp  polyModifierNode.cpp
src/standalone/: autoAlignCmd.cpp  decimatorCmd.cpp  meshStatsCmd.cpp
src/vcgNodes/: vcgNodesMain.cpp
src/vcgNodes/vcgDecimate/: vcgDecimateCmd.cpp  vcgDecimateFty.cpp  vcgDecimateFtyAction.cpp  vcgDecimateNode.cpp
src/vcgNodes/vcgMeshCutter/: vcgMeshCutterCmd.cpp  vcgMeshCutterFty.cpp  vcgMeshCutterFtyAction.cpp  vcgMeshCutterNode.cpp
src/vcgNodes/vcgMeshStats/: vcgMeshStatsCmd.cpp  vcgMeshStatsFty.cpp  vcgMeshStatsFtyAction.cpp  vcgMeshStatsNode.cpp
src/vcgNodes/vcgReadFile/: vcgReadFileCmd.cpp  vcgReadFileFty.cpp  vcgReadFileFtyAction.cpp  vcgReadFileNode.cpp
src/vcgNodes/vcgWriteFile/: vcgWriteFileCmd.cpp  vcgWriteFileFty.cpp  vcgWriteFileFtyAction.cpp  vcgWriteFileNode.cpp
test/: runVcgNodesTests.py  test.sh
test/vcgNodes_tests/: testUtils.py  test_decimate.py  test_meshCutter.py  test_meshStats.py  test_readFile.py  test_writeFile.py
